--- a/projeto/core/templates/index.html
+++ b/projeto/core/templates/index.html
@@ -3,8 +3,8 @@
 
 <div class="jumbotron">
   <div class="container">
-    <h1>Bem-vindo!</h1>
-    <p>Este é um sistema para controle de notas fiscais.</p>
+    <h1>Seja bem-vindo!</h1>
+    <p>Este é um sistema de gestão de notas fiscais.</p>
     <p>
       <a href="https://github.com/vvalcristina/notafiscal.git">Veja no GitHub</a>
     </p>
