--- a/projeto/empresa/templates/empresa_list.html
+++ b/projeto/empresa/templates/empresa_list.html
@@ -1,36 +1,33 @@
-{% extends "base.html "%}
-{% block css %}
-  <style>
-    ok{
-      color: green;
-    }
-
-  </style>
-
-{%endblock css%}
+{% extends "base.html" %}
 
 {% block content %}
 
 <div class="page-header">
-  <h2><i class="fa fa-user"></i>Lista de Empresas Cadastradas</h2>
+  <h2><i class="fa fa-user"></i>  Lista de Empresas Cadastradas</h2>
   {% if object_list %}
-      <table class="table table-striped">
-        <thead>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>CNPJ</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for object in object_list%}
           <tr>
-            <th>Nome da Empresa</th>
-            <th>CNPJ</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>{{object.nome}}</td>
+            <td>
+              <a href="{% url 'empresa:empresa_detail' object.pk %}">{{object.nome}}</a>
+            </td>
             <td>{{object.cnpj}}</td>
           </tr>
-        </tbody>
-      </table>
-    {% else %}
-      <p class="alert alert-warning">A Empresa não se encontra na lista</p>
-    {% endif %}
+        {% endfor %}
+      </tbody>
+    </table>
+  {% else %}
+     <p class="alert alert-warning">Sem itens na lista.</p>
+  {% endif %}
+
+
 
 </div>
 
