Ajustando o empresa_form e ajustando as views para edição

--- a/projeto/empresa/templates/empresa_detail.html
+++ b/projeto/empresa/templates/empresa_detail.html
@@ -5,7 +5,7 @@
 
 <h1>{{object}}
   <span class="pull-right">
-    <a href="">
+    <a href="{% url 'empresa:empresa_edit' object.pk %}">
       <button type="button" class="btn btn-success">
         <span class="fa fa-pencil"></span>Editar
       </button>
