--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -16,8 +16,8 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nota Fiscal</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="#">Número</a>
-                    <a class="dropdown-item" href="#">Produto</a>
+                    <a class="dropdown-item" href="{% url 'notafiscal:notafiscal_list'%}">Empresas</a>
+                    <a class="dropdown-item" href="{% url 'notafiscal:notafiscal_list'%}">Número</a>
                 </div>
             </li>
         </ul>
