--- a/projeto/notafiscal/templates/notafiscal_list.html
+++ b/projeto/notafiscal/templates/notafiscal_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h2>Lista de Notas Fiscais
   <span class="pull-righ">
-    <a href="">
+    <a href="{% url 'notafiscal:notafiscal_add' %}">
       <button type="buton" class="btn btn-primary">
         <span class="fa fa-plus"></span>Adicionar
       </button>
