--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Nota Fiscal</a>
+    <a class="navbar-brand" href="">Nota Fiscal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,7 +16,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nota Fiscal</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{% url 'notafiscal:notafiscal_list'%}">Empresas</a>
+                    <a class="dropdown-item" href="{% url 'notafiscal:notafiscal_list'%}">Notas Fiscais</a>
                     <a class="dropdown-item" href="{% url 'notafiscal:notafiscal_list'%}">Número</a>
                 </div>
             </li>
