--- a/projeto/notafiscal/templates/notafiscal_form.html
+++ b/projeto/notafiscal/templates/notafiscal_form.html
@@ -1,103 +1,33 @@
 {% extends "base.html" %}
-
 {% load widget_tweaks %}
-{% load bootstrap %}
-
 {% block css %}
-
   <style>
     span.required:after{
       content:"*";
       color: red;
     }
   </style>
-
 {% endblock css %}
 
 {% block content %}
-
-<div class= "container">
-  <a href="{% url 'notafiscal:notafiscal_list' %}">Voltar</a>
-  <div class="row">
-    <div class="cols">
-      <form method="POST" novalidate>
-        {% csrf_token %}
-        <legend style="border-bottom: 1px solid #e5e5e5;">Entrada de Notas Fiscais</legend>
-        <div class="row">
-          <div class="col-sm-12">
-            {% for field in form.visible_fields %}
-              <div class="form-group{% if field.errors %} has-error {% endif %}">
-                <label for="{{ field.id_for_label }}">
-                  {% if field.field.required %}
-                    <span class="required">{{ field.label }}</span>
-                  {% else %}
-                    {{ field.label }}
-                  {% endif %}
-                </label>
-                  {% render_field field class="form-control" %}
-                  {% for error in field.errors %}
-                    <span class="text-muted"{{ error }}></span>
-                  {% endfor %}
-              </div>
-            {% endfor %}
-            {{ formset.management_form }}
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-12">
-            <legend style="border-bottom: 1px solid #e5e5e5;">Empresas: </legend>
-          <div id="notafiscal" class="form-inline">
-            {% for item_notafiscal_form in formset %}
-              <div id="item-{{ forloop.counter0}}" class="form-group">
-                {{ item_notafiscal_form|bootstrap}}
-              </div>
-            {% endfor %}
-            </div>
-          </div>
-        </div>
-
-        <span id="add-item" class="btn btn-info stryle" style="margin-top: 10px;">
-          <i class="fa fa-plus"></i>Adicionar
-        </span>
-
-        <div class="row float-right">
-          <div class="col-sm-12" style="margin-top: 10px;">
-            <div class="form-inline buttons">
-              <button class="btn btn-primary" value="Save">
-                <i class="fa fa-floppy-o"></i>
-                Salvar
-              </button>
-              <a href="">
-                <i class="fa fa-times"></i>
-                Cancelar
-              </a>
-            </div>
-          </div>
-        </div>
-      </form>
+<form method="POST" novalidate>
+  <!-- Para validar a criação de notas fiscais csrf_token -->
+  {% csrf_token %}
+  {% for field in form.visible_fields %}
+    <div class="form-group{% if field.errors %} has-error {% endif %}">
+      <label for="{{ field.id_for_label }}">
+        {% if field.field.required %}
+          <span class="required">{{ field.label }}</span>
+        {% else %}
+          {{field.label }}
+        {% endif %}
+      </label>
+        {% render_field field class="form-control" %}
+        {% for error in field.errors %}
+          <<span class="text-muted">{{ error }}</span>
+        {% endfor %}
     </div>
-  </div>
-</div>
+  {% endfor %}
+  <button type="submit"class="btn btn-sucess"> Cadastro </button>
+</form>
 {% endblock content %}
-
-{% block js %}
-<script>
-  $(document).ready(function(){
-    $('#add-item').click(function(ev) {
-      ev.preventDefault();
-      var count = $('#notafiscal').children('').length;
-      var tmplMarkup = $('#item-notafiscal').html();
-      var compiledTmpl = tmpMarkup.replace(/__prefix/g, count);
-      s('div#notafiscal').append(compiledTmpl);
-    });
-  });
-</script>
-
-<script type="text/html" id="item-notafiscal">
-  <div id="item-__prefix__" class="form-group"">
-    {{ formset.empty_form|bootstrap}}
-    </div>
-  </script>
-
-{% endblock js %}
