--- a/projeto/notafiscal/templates/notafiscal_list.html
+++ b/projeto/notafiscal/templates/notafiscal_list.html
@@ -1,42 +1,55 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Lista de Notas Fiscais
-  <span class="pull-righ">
-    <a href="{% url 'notafiscal:notafiscal_add' %}">
-      <button type="buton" class="btn btn-primary">
-        <span class="fa fa-plus"></span>Adicionar
-      </button>
-    </a>
-  </span>
-</h2>
-{% if object_list %}
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Empresa</th>
-        <th>Série</th>
-        <th>Número</th>
-        <th>Descrição/Nome</th>
-        <th>Peso(kg)</th>
-        <th>Cubagem(m³)</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for object in object_list %}
+<div class="row">
+  <div class="col-sm-6">
+    <form action="."method="GET" class="form-inline">
+      <input type="text" id="search" name="search" class="form-control" placeholder="Busca">
+      <input type="submit" class="btn btn-primary" style="margin-left: 10px;" value="OK">
+    </form>
+  </div>
+</div>
+
+
+<div class="page-header">
+  <h2>Lista de Notas Fiscais
+    <span class="pull-righ">
+      <a href="{% url 'notafiscal:notafiscal_add' %}">
+        <button type="buton" class="btn btn-primary">
+          <span class="fa fa-plus"></span>Adicionar
+        </button>
+      </a>
+    </span>
+  </h2>
+  {% if object_list %}
+    <table class="table table-striped">
+      <thead>
         <tr>
-          <td>
-            <a href="{% url 'notafiscal:notafiscal_detail' object.pk %}">{{ object.empresa }}</a>
-          </td>
-          <td>{{ object.serie }}</td>
-          <td>{{ object.numero }}</td>
-          <td>{{ object.descricao }}</td>
-          <td>{{ object.peso }}</td>
-          <td>{{ object.cubagem }}</td>
+          <th>Empresa</th>
+          <th>Série</th>
+          <th>Número</th>
+          <th>Descrição/Nome</th>
+          <th>Peso(kg)</th>
+          <th>Cubagem(m³)</th>
         </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-{% else %}
-  <p class="alert alert-warning">Não existem notas fiscais nesta lista</p>
-{% endif %}
+      </thead>
+      <tbody>
+        {% for object in object_list %}
+          <tr>
+            <td>
+              <a href="{% url 'notafiscal:notafiscal_detail' object.pk %}">{{ object.empresa }}</a>
+            </td>
+            <td>{{ object.serie }}</td>
+            <td>{{ object.numero }}</td>
+            <td>{{ object.descricao }}</td>
+            <td>{{ object.peso }}</td>
+            <td>{{ object.cubagem }}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% else %}
+    <p class="alert alert-warning">Não existem notas fiscais nesta lista</p>
+  {% endif %}
+</div>
+
 {% endblock content %}
