Corrgindo as tabelas

--- a/projeto/empresa/templates/empresa_list.html
+++ b/projeto/empresa/templates/empresa_list.html
@@ -13,11 +13,11 @@
     </span>
   </h2>
   {% if object_list %}
-    <table class="table table-striped">
+    <table class="table table-borded">
       <thead>
         <tr>
-          <th>Nome</th>
-          <th>CNPJ</th>
+          <th scope="col">Nome</th>
+          <th scope="col">CNPJ</th>
         </tr>
       </thead>
       <tbody>
