--- a/projeto/empresa/templates/empresa_list.html
+++ b/projeto/empresa/templates/empresa_list.html
@@ -16,7 +16,7 @@
     <table class="table table-borded">
       <thead>
         <tr>
-          <th scope="col">Nome</th>
+          <th scope="col">Empresa</th>
           <th scope="col">CNPJ</th>
         </tr>
       </thead>
