--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -1,9 +1,5 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="">Nota Fiscal</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -13,12 +9,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'empresa:empresa_list'%}">Empresa</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nota Fiscal</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{% url 'notafiscal:notafiscal_list'%}">Notas Fiscais</a>
-                    <a class="dropdown-item" href="{% url 'notafiscal:notafiscal_list'%}">Número</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'notafiscal:notafiscal_list'%}">Nota Fiscal</a>
             </li>
         </ul>
     </div>
