--- a/projeto/empresa/templates/empresa_list.html
+++ b/projeto/empresa/templates/empresa_list.html
@@ -35,8 +35,8 @@
      <p class="alert alert-warning">Sem itens na lista.</p>
   {% endif %}
 
-
-
 </div>
+
+{% include "includes/pagination.html" %}
 
 {% endblock content %}
