--- a/projeto/empresa/templates/empresa_form.html
+++ b/projeto/empresa/templates/empresa_form.html
@@ -1,17 +1,11 @@
 {% extends "base.html" %}
+{% load static %}
 {% load widget_tweaks %}
-{% block css %}
-  <style>
-    span.required:after{
-      content:" *";
-      color: red;
-    }
-  </style>
-{% endblock css %}
+
 
 {% block content %}
 
-<form method="POST" novalidate>
+<form class="form-horizontal" style="width: 400px; margin: 0 auto;" method="POST" novalidate>
 <!--  #Para validar o post dos dados  {% csrf_token %}-->
   {% csrf_token %}
   {% for field in form.visible_fields %}
