Otimizando as páginas

--- a/projeto/core/templates/index.html
+++ b/projeto/core/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+<!--Pàgina Inicial -->
 <div class="jumbotron">
   <div class="container">
     <h1>Seja bem-vindo!</h1>
