--- a/projeto/notafiscal/templates/notafiscal_list.html
+++ b/projeto/notafiscal/templates/notafiscal_list.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-  <div class="col-sm-6">
-    <form action="."method="GET" class="form-inline">
+  <div class="col-sm-10" style= "margin-top: 10px;">
+    <form action="." method="GET" class="form-inline">
       <input type="text" id="search" name="search" class="form-control" placeholder="Busca">
-      <input type="submit" class="btn btn-primary" style="margin-left: 10px;" value="OK">
+      <input type="submit" class="btn btn-sucess" style="margin-left: 10px;" value="OK">
     </form>
   </div>
 </div>
 
 
-<div class="page-header">
+<div class="page-header" style= "margin-top: 15px;">
   <h2>Lista de Notas Fiscais
     <span class="pull-righ">
       <a href="{% url 'notafiscal:notafiscal_add' %}">
@@ -21,7 +21,7 @@
     </span>
   </h2>
   {% if object_list %}
-    <table class="table table-striped">
+    <table class="table table-striped" style="width: 1350px; margin: 0 auto;">
       <thead>
         <tr>
           <th>Empresa</th>
