--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -1,4 +1,4 @@
-
+<!--Menu do blog  -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
