Relacionando empresa a nota fiscal

--- a/projeto/empresa/templates/empresa_detail.html
+++ b/projeto/empresa/templates/empresa_detail.html
@@ -18,7 +18,7 @@
     <tbody>
       <tr>
         <th class="text-right">Empresa:</th>
-        <td>{{object.nome}}</td>
+        <td>{{object.empresa}}</td>
       </tr>
       <tr>
         <th class="text-right">CNPJ: </th>
