--- a/projeto/empresa/templates/empresa_list.html
+++ b/projeto/empresa/templates/empresa_list.html
@@ -5,11 +5,13 @@
 <div class="col-sm-10" style= "margin-top: 30px;">
   <h2>Lista de Empresas
     <span class="pull-righ">
+      {% if user.is_authenticated %}
       <a href="{% url 'empresa:empresa_add'%}">
         <button type="buton" class="btn btn-primary">
           <span class="fa fa-plus"></span>Adicionar
         </button>
       </a>
+      {% endif %}
     </span>
   </h2>
   {% if object_list %}
