--- a/projeto/notafiscal/templates/notafiscal_detail.html
+++ b/projeto/notafiscal/templates/notafiscal_detail.html
@@ -1,15 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
+
   <a href="{% url 'notafiscal:notafiscal_list' %}">Voltar</a>
 
   <h1>{{ object }}
     <span class="pull-right">
+      {% if user.is_authenticated %}
       <a href="{% url 'notafiscal:notafiscal_edit' object.pk %}">
         <button type="button" class="btn btn-primary">
           <span class="fa fa-pencil"></span>Editar
         </button>
       </a>
+      {% endif %}
     </span>
   </h1>
 
