--- a/projeto/notafiscal/templates/notafiscal_list.html
+++ b/projeto/notafiscal/templates/notafiscal_list.html
@@ -13,11 +13,13 @@
 <div class="page-header" style= "margin-top: 15px;">
   <h2>Lista de Notas Fiscais
     <span class="pull-righ">
+      {% if user.is_authenticated %}
       <a href="{% url 'notafiscal:notafiscal_add' %}">
         <button type="buton" class="btn btn-primary">
           <span class="fa fa-plus"></span>Adicionar
         </button>
       </a>
+      {% endif %}
     </span>
   </h2>
   {% if object_list %}
