Bootstrap nas Notas Fiscais

--- a/projeto/notafiscal/templates/notafiscal_detail.html
+++ b/projeto/notafiscal/templates/notafiscal_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <a href="{% url 'notafiscal:notafiscal_list' %}">Voltar</a>
+  <a href="{% url 'empresa:empresa_list' %}">Voltar</a>
 
   <h1>{{ object }}
     <span class="pull-right">
