--- a/projeto/empresa/templates/empresa_list.html
+++ b/projeto/empresa/templates/empresa_list.html
@@ -25,7 +25,7 @@
       {% for object in object_list %}
         <tr>
           <th>
-            <a href="{% url 'notafiscal:notafiscal_list2' object.pk %}">{{ object.empresa }}</a>
+            <a href="{% url 'notafiscal:notafiscal_list' object.pk %}">{{ object.empresa }}</a>
             </th>
           <th>{{ object.cnpj }}</th>
         </tr>
