--- a/nfe/core/templates/index.html
+++ b/nfe/core/templates/index.html
@@ -5,7 +5,7 @@
 <div class="jumbotron">
   <div class="container">
     <h1>Seja bem-vindo!</h1>
-    <p>Este é um sistema de gestão de notas fiscais.</p>
+    <p>Este é um sistema de Notas Fiscais Eletrônicas utilizando o framework Django.</p>
     <p>
       <a href="https://github.com/vvalcristina/notafiscal.git">Veja no GitHub</a>
     </p>
