--- a/nfe/core/templates/includes/nav.html
+++ b/nfe/core/templates/includes/nav.html
@@ -4,7 +4,7 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{%url 'core:index'%}" >Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{%url 'index'%}" >Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'empresa:empresa_list'%}">Empresa</a>
