--- a/nfe/notafiscal/templates/notafiscal_list.html
+++ b/nfe/notafiscal/templates/notafiscal_list.html
@@ -54,4 +54,5 @@
     <p class="alert alert-warning">Não existem notas fiscais nesta lista</p>
   {% endif %}
 </div>
+{% include "includes/pagination.html" %}
 {% endblock content %}
