--- a/nfe/empresa/templates/empresa_form.html
+++ b/nfe/empresa/templates/empresa_form.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load widget_tweaks %}
 
 
 {% block content %}
@@ -16,6 +17,7 @@
           {{ field.label }}
         {% endif %}
       </label>
+        {% render_field field class="form-control" %}
         {% for error in field.errors %}
           <span class="text-muted"{{ error }}></span>
         {% endfor %}
